--- a/src/app/downloads/class-competition/class-competition.component.html
+++ b/src/app/downloads/class-competition/class-competition.component.html
@@ -9,8 +9,18 @@
             <th>Download</th>
           </tr>
         </thead>
+        
         <tr>
-          <td><strong>1. </strong></td>
+          <td><strong>7. </strong></td>
+          <td>objective</td>
+          <td>
+            <a href="../../../assets/download-documents/competition/aa.pdf" download>
+              <i class="fa fa-cloud-download fa-2x"></i>
+            </a>
+          </td>
+        </tr>
+        <tr>
+          <td><strong>6. </strong></td>
           <td>GS -1 - topic name</td>
           <td>
             <a href="../../../assets/download-documents/competition/1.pdf" download>
@@ -20,7 +30,7 @@
         </tr>
 
         <tr>
-            <td><strong>2. </strong></td>
+            <td><strong>5. </strong></td>
             <td>Arithmatic - topic name</td>
             <td>
               <a href="../../../assets/download-documents/competition/2.pdf" download>
@@ -29,7 +39,7 @@
             </td>
           </tr>
           <tr>
-              <td><strong>3. </strong></td>
+              <td><strong>4. </strong></td>
               <td>Geomatory - topic name</td>
               <td>
                 <a href="../../../assets/download-documents/competition/3.pdf" download>
@@ -38,7 +48,7 @@
               </td>
             </tr>
             <tr>
-                <td><strong>4. </strong></td>
+                <td><strong>3. </strong></td>
                 <td>Height & Distance - topic name</td>
                 <td>
                   <a href="../../../assets/download-documents/competition/4.pdf" download>
@@ -47,7 +57,7 @@
                 </td>
               </tr>
               <tr>
-                  <td><strong>5. </strong></td>
+                  <td><strong>2. </strong></td>
                   <td>Biology - topic name</td>
                   <td>
                     <a href="../../../assets/download-documents/competition/5.pdf" download>
@@ -56,7 +66,7 @@
                   </td>
                 </tr>
                 <tr>
-                    <td><strong>6. </strong></td>
+                    <td><strong>1. </strong></td>
                     <td>English - topic name</td>
                     <td>
                       <a href="../../../assets/download-documents/competition/6.pdf" download>
