--- a/src/app/downloads/class-competition/class-competition.component.html
+++ b/src/app/downloads/class-competition/class-competition.component.html
@@ -9,6 +9,16 @@
             <th>Download</th>
           </tr>
         </thead>
+
+        <tr>
+          <td><strong>8. </strong></td>
+          <td>questionpaper</td>
+          <td>
+            <a href="../../../assets/download-documents/competition/rrb.pdf" download>
+              <i class="fa fa-cloud-download fa-2x"></i>
+            </a>
+          </td>
+        </tr>
         
         <tr>
           <td><strong>7. </strong></td>
