--- a/src/app/downloads/class-competition/class-competition.component.html
+++ b/src/app/downloads/class-competition/class-competition.component.html
@@ -11,10 +11,10 @@
         </thead>
 
         <tr>
-          <td><strong>8. </strong></td>
-          <td>questionpaper</td>
+          <td><strong>9. </strong></td>
+          <td>subjective</td>
           <td>
-            <a href="../../../assets/download-documents/competition/rrb.pdf" download>
+            <a href="../../../assets/download-documents/competition/science.pdf" download>
               <i class="fa fa-cloud-download fa-2x"></i>
             </a>
           </td>
