--- a/src/app/downloads/class-eleven/class-eleven.component.html
+++ b/src/app/downloads/class-eleven/class-eleven.component.html
@@ -8,12 +8,15 @@
             <th>Name</th>
             <th>Download</th>
           </tr>
-        </thead>
-        <tr>
-          <td><strong>1. </strong></td>
-          <td>Science - topic name</td>
+        </thead> <tr>
+          <td><strong>7. </strong></td>
+          <td>Science</td>
           <td>
-            <a href="../../../assets/download-documents/class-11/1.pdf" download>
+        <tr>
+          <td><strong>7. </strong></td>
+          <td>Science/td>
+          <td>
+            <a href="../../../assets/download-documents/class-11/science.pdf" download>
               <i class="fa fa-cloud-download fa-2x"></i>
             </a>
           </td>
