--- a/src/app/downloads/class-competition/class-competition.component.html
+++ b/src/app/downloads/class-competition/class-competition.component.html
@@ -9,7 +9,15 @@
             <th>Download</th>
           </tr>
         </thead>
-
+<tr>
+          <td><strong>10. </strong></td>
+          <td>onelinercurrentaffairs</td>
+          <td>
+            <a href="../../../assets/download-documents/competition/1000current.pdf" download>
+              <i class="fa fa-cloud-download fa-2x"></i>
+            </a>
+          </td>
+        </tr>
         <tr>
           <td><strong>9. </strong></td>
           <td>subjective</td>
