--- a/src/app/downloads/class-competition/class-competition.component.html
+++ b/src/app/downloads/class-competition/class-competition.component.html
@@ -8,31 +8,12 @@
             <th>Name</th>
             <th>Download</th>
           </tr>
-        </thead>
-<tr>
-          <td><strong>10. </strong></td>
-          <td>onelinercurrentaffairs</td>
-          <td>
-            <a href="../../../assets/download-documents/competition/1000current.pdf" download>
-              <i class="fa fa-cloud-download fa-2x"></i>
-            </a>
-          </td>
-        </tr>
-        <tr>
-          <td><strong>9. </strong></td>
-          <td>subjective</td>
-          <td>
-            <a href="../../../assets/download-documents/competition/science.pdf" download>
-              <i class="fa fa-cloud-download fa-2x"></i>
-            </a>
-          </td>
-        </tr>
-        
+        </thead
         <tr>
           <td><strong>7. </strong></td>
-          <td>objective</td>
+          <td>currentoneliner</td>
           <td>
-            <a href="../../../assets/download-documents/competition/aa.pdf" download>
+            <a href="../../../assets/download-documents/competition/current.pdf" download>
               <i class="fa fa-cloud-download fa-2x"></i>
             </a>
           </td>
