--- a/src/app/downloads/class-competition/class-competition.component.html
+++ b/src/app/downloads/class-competition/class-competition.component.html
@@ -9,15 +9,16 @@
             <th>Download</th>
           </tr>
         </thead
-        <tr>
+   tr>
           <td><strong>7. </strong></td>
-          <td>currentoneliner</td>
+          <td>current</td>
           <td>
-            <a href="../../../assets/download-documents/competition/current.pdf" download>
+            <a href="../../../assets/download-documents/competition/currentafairsonelinears.pdf" download>
               <i class="fa fa-cloud-download fa-2x"></i>
             </a>
           </td>
         </tr>
+
         <tr>
           <td><strong>6. </strong></td>
           <td>GS -1 - topic name</td>
