Class Eleven corrected

--- a/src/app/downloads/class-eleven/class-eleven.component.html
+++ b/src/app/downloads/class-eleven/class-eleven.component.html
@@ -8,10 +8,7 @@
             <th>Name</th>
             <th>Download</th>
           </tr>
-        </thead> <tr>
-          <td><strong>7. </strong></td>
-          <td>Science</td>
-          <td>
+        </thead>
         <tr>
           <td><strong>7. </strong></td>
           <td>Science/td>
