--- a/src/app/downloads/class-competition/class-competition.component.html
+++ b/src/app/downloads/class-competition/class-competition.component.html
@@ -8,8 +8,8 @@
             <th>Name</th>
             <th>Download</th>
           </tr>
-        </thead
-   tr>
+        </thead>
+        <tr>
           <td><strong>7. </strong></td>
           <td>current</td>
           <td>
