Corrected html tag

--- a/src/app/downloads/class-eleven/class-eleven.component.html
+++ b/src/app/downloads/class-eleven/class-eleven.component.html
@@ -11,7 +11,7 @@
         </thead>
         <tr>
           <td><strong>7. </strong></td>
-          <td>Science/td>
+          <td>Science</td>
           <td>
             <a href="../../../assets/download-documents/class-11/science.pdf" download>
               <i class="fa fa-cloud-download fa-2x"></i>
